--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/3. 流程图格式化.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/3. 流程图格式化.md
@@ -20,31 +20,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入接口的流程编辑器页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/197717492-77bd6c98-9dc7-496b-8a27-80485e80d4e9.png)
 
 ##### 图3-1 进入模型编辑
 
 b）绘制接口的流程图（格式化前）。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197717502-d0e4f056-b001-4bc9-aeb0-8ac9bac8c2f2.png)
 
 ##### 图3-2 绘制接口的流程图
 
 c）单击流程编辑器上方格式化选项。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/197717528-0d6a2326-0736-48a7-a132-ec2919a7bf05.png)
 
 ##### 图3-3 单击格式化选项
 
 d）即可看到流程图格式化后的效果。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-4.png)
+![image](https://user-images.githubusercontent.com/79617492/197717557-970d6c0f-9442-4214-9933-ca07695edcaf.png)
 
 ##### 图3-4 流程图格式化后的效果
 
 e）鼠标放置在格式化按钮上时，可选择撤回到上次格式化。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/3-5.png)
+![image](https://user-images.githubusercontent.com/79617492/197717585-f9877321-d6ae-4da1-935c-fdac9028a800.png)
 
 ##### 图3-5 可选择撤回到上次格式化
 
