--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/4. 流程图组件跨项目、页签复制粘贴.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/4. 流程图组件跨项目、页签复制粘贴.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.4 流程编辑器
+
+#### 4.13.4.4 流程图组件跨项目、页签复制粘贴
+
+流程图中的组件支持跨项目、页签进行复制粘贴，但如果当前项目没有加载相应的组件，则无法粘贴。
+
+#### 4.13.4.4.1 前提条件
+
+a）您需要拥有“流程编辑器”功能的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.13.4.4.2 操作示例
