--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/1. 基础概述.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/1. 基础概述.md
@@ -15,3 +15,13 @@
 （该测试用例执行轨迹经过的分支节点数量总和/该接口流程图中所有分支节点数量总和）* 100%
 
 ##### 接口覆盖率的计算方式：
+
+(该接口所有测试用例执行轨迹经过分支节点数量总和/该接口流程图中所有分支节点数量总和) * 100%
+
+```
+注意：
+
+a）用户应确保每条测试用例执行的是不同场景、经过的是不同分支节点，若多条测试用例执行场景所经过的分支节点重复，接口覆盖率不会累加。
+
+b）当接口流程图发生修改重新保存后，接口覆盖率会被清空，需重新执行测试用例。
+```
