--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/2. 查看测试用例覆盖率.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/2. 查看测试用例覆盖率.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.5 接口覆盖率
+
+#### 4.13.5.2 查看测试用例覆盖率
+
+本节为您介绍如何查看测试用例覆盖率。
+
+#### 4.13.5.2.1 操作步骤
+
+a）进入全自动开发平台“接口管理”功能模块，选择一个已开发完成的接口，单击接口右侧的三个点按钮，选择“测试用例”，如图2-1所示：
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/5.%20%E6%8E%A5%E5%8F%A3%E8%A6%86%E7%9B%96%E7%8E%87/image.png)
+
+##### 图2-1 选择测试用例
+
+b）进入接口的测试用例列表页面，执行一条测试用例，您可以新增测试用例执行，也可以执行已创建的测试用例，如图2-2所示：
+
+##### 说明：未执行或执行失败的测试用例覆盖率显示为0%，测试用例覆盖率在执行成功后会发生变化。
