--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/2. 查看测试用例覆盖率.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/2. 查看测试用例覆盖率.md
@@ -34,3 +34,16 @@ d）查看测试用例的流程执行轨迹，如图2-4所示：
 
 ```
 说明：
+
+通过示例流程图中的两个互斥条件组件以及一条异常处理流程线，我们可以看出该示例流程图共有8个分支节点，而当前测试用例的执行轨迹经过了图中第3个分支节点，即经过了1个分支节点，由测试用例覆盖率 = （该测试用例执行轨迹经过的分支节点数量总和/该接口流程图中所有分支节点数量总和）* 100%，故该条测试用例的覆盖率为(1/8)* 100% = 12.5%。
+```
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/5.%20%E6%8E%A5%E5%8F%A3%E8%A6%86%E7%9B%96%E7%8E%87/2-4.png)
+
+##### 图2-4 流程执行轨迹界面
+
+e）回到测试用例列表页面，查看测试用例覆盖率的变化，如图2-5所示：
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/5.%20%E6%8E%A5%E5%8F%A3%E8%A6%86%E7%9B%96%E7%8E%87/2-5.png)
+
+##### 图2-5 测试用例列表页面
