--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/3. 查看接口覆盖率.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/5. 接口覆盖率/3. 查看接口覆盖率.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.5 接口覆盖率
+
+#### 4.13.5.3 查看接口覆盖率
+
+本节为您介绍如何查看接口覆盖率。
+
+#### 4.13.5.3.1 操作步骤
+
+a）打开“新增接口模块”左侧的眼睛按钮，即可显示接口覆盖率以及接口的路径、请求方法信息，如图3-1所示：
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/5.%20%E6%8E%A5%E5%8F%A3%E8%A6%86%E7%9B%96%E7%8E%87/3-1.png)
+
+##### 图3-1 打开眼睛按钮
+
+b）通过执行多条不同场景、需经过不同分支节点的测试用例，查看接口覆盖率的变化，如图3-2所示，当该接口仅创建并执行成功一条测试用例时，接口覆盖率显示为12.5%，该测试用例的执行轨迹如图3-3所示：
