--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/1. 设置接口的集成监控.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/1. 设置接口的集成监控.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.6 集成监控接口
+
+#### 4.13.6.1 设置接口的集成监控
+
+平台提供对接口进行指标上报、监控上报以及字段监控采集的功能。用户可以根据需求进行相关设置，并通过第三方运维集成平台对监控采集到的数据进行分析，其中采集到的数据包含接口请求总次数、响应时间及请求参数等。
+
+本节主要介绍如何设置接口的集成监控。
+
+#### 4.13.6.1.1 操作步骤
+
+a）新增一个接口，配置接口的基本信息，点击更多设置展开接口的其他设置。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/image.png)
+
+##### 图1-1 配置接口的基本信息
