--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/2. 查看监控采集的数据.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/2. 查看监控采集的数据.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.6 集成监控接口
+
+#### 4.13.6.2 查看监控采集的数据
+
+本节主要介绍如何查看监控采集到的数据。
+
+#### 4.13.6.2.1 操作步骤
+
+a）在浏览器的地址栏输入 http://ip地址:9091/actuator/prometheus ，即可查看监控上报的数据，包含请求接口、总的请求次数、总的响应时间、最大的一次响应时间等。
+
+##### 说明：ip地址为对项目进行部署的服务器ip地址，9091为默认端口号。
