--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/2. 查看监控采集的数据.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/2. 查看监控采集的数据.md
@@ -13,3 +13,9 @@
 a）在浏览器的地址栏输入 http://ip地址:9091/actuator/prometheus ，即可查看监控上报的数据，包含请求接口、总的请求次数、总的响应时间、最大的一次响应时间等。
 
 ##### 说明：ip地址为对项目进行部署的服务器ip地址，9091为默认端口号。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/2-1.png)
+
+##### 图2-1 查看监控上报的数据
+
+b）可通过promentheus、grafana等第三方监控平台，对监控采集到的接口数据进行提取和分析监控等。
