--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.6 集成监控接口
+
+#### 4.13.6.3 集成influxdb数据库监控接口
+
+全自动开发平台集成监控系统支持集成influxdb数据库实现对接口数据的监控。influxdb是一个开源的时序数据库，使用GO语言开发，特别适合用于处理和分析资源监控数据这种时序相关的数据，而influxdb自带的各种特殊函数如求标准差、随机取样数据、统计数据变化比等，使数据统计和实时分析变得十分方便。
+
+本节将介绍如何配置influxdb数据库实现接口监控。
+
+##### 注意：只有在安装本地客户端或者部署项目时才可以配置influxdb数据库实现接口监控。
+
+#### 4.13.6.3.1 前提条件
+
+您需要下载并解压本地客户端安装包或者执行引擎包，具体可参见《SoFlu（后端）全自动开发平台教程第2.9节：如何部署项目》或《SoFlu（后端）全自动开发平台教程第2.10节：安装本地客户端》。
+
+#### 4.13.6.3.2 操作步骤
