--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
@@ -17,3 +17,33 @@
 您需要下载并解压本地客户端安装包或者执行引擎包，具体可参见《SoFlu（后端）全自动开发平台教程第2.9节：如何部署项目》或《SoFlu（后端）全自动开发平台教程第2.10节：安装本地客户端》。
 
 #### 4.13.6.3.2 操作步骤
+
+a）在本地客户端安装包或执行引擎包路径下配置application.yml文件（路径下若未该文件，则需新建一个该文件），打开接口监控开关同时配置数据库信息，application.yml文件的具体配置如下：
+
+```
+#健康检查开关配置
+management:
+    server:
+        #默认的监控信息查看端口配置
+        port:9091
+    metrics:
+        #监控信息同步导出到influxdb中的配置
+        export:
+            influx:
+                #是否同步开关（值为true时即可开启同步）
+                enabled: true
+                # influxdb同步地址
+                uri: http://ip:port
+                # influxdb同步库名
+                db: flowcore_influxdb_dev
+                # influxdb用户名
+                user-name: admin
+                # influxdb密码
+                password: admin
+
+# 监控信息上报开关(控制执行引擎中的所有项目是否上报监控信息的总开关)
+metrics-report:
+    enable: true
+```
+
+b）启动本地客户端或者本地执行引擎项目。
