--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
@@ -71,3 +71,17 @@ e）通过工具（如示例工具xshell）连接上配置文件中的infludb数
 ##### 图3-4 查看数据库中监控到的接口信息
 
 f）输入命令influx连接，可以看到当前数据口连接的版本和地址。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-5.png)
+
+##### 图3-5 输入命令influx连接
+
+g）输入命令auth，登录数据库的账户密码（该账号密码需与application.yml配置文件中的数据库连接信息保持一致）。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-6.png)
+
+##### 图3-6 登录数据库的账户密码
+
+h）输入命令show databases，显示所有数据库信息。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-7.png)
