--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/6. 集成监控接口/3. 集成influxdb数据库监控接口.md
@@ -48,17 +48,17 @@ metrics-report:
 
 b）启动本地客户端或者本地执行引擎项目。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/197730429-d0ff1cf0-a38c-4abe-adf1-42ff6839c0a4.png)
 
 ##### 图3-1 启动本地客户端
 
 c）打开接口的监控开关及字段采集数据。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197730455-04f5dc6e-c3b0-4412-ace3-3d5101268d24.png)
 
 ##### 图3-2 打开接口的上报开关
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/197730476-5718b89b-1703-48d8-a120-4fc72cf60e7e.png)
 
 ##### 图3-3 打开接口的监控开关
 
@@ -66,43 +66,43 @@ d）运行接口即可开启接口监控数据采集。
 
 e）通过工具（如示例工具xshell）连接上配置文件中的infludb数据库，查看数据库中监控到的接口信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-4.png)
+![image](https://user-images.githubusercontent.com/79617492/197730511-9e34759e-7929-4277-95cf-3db2a0ec986d.png)
 
 ##### 图3-4 查看数据库中监控到的接口信息
 
 f）输入命令influx连接，可以看到当前数据口连接的版本和地址。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-5.png)
+![image](https://user-images.githubusercontent.com/79617492/197730546-ddee5980-ac79-4550-93da-18d6cb98d3f8.png)
 
 ##### 图3-5 输入命令influx连接
 
 g）输入命令auth，登录数据库的账户密码（该账号密码需与application.yml配置文件中的数据库连接信息保持一致）。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-6.png)
+![image](https://user-images.githubusercontent.com/79617492/197730578-97f63ce5-bd7b-4d99-ac61-191a359852f0.png)
 
 ##### 图3-6 登录数据库的账户密码
 
 h）输入命令show databases，显示所有数据库信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-7.png)
+![image](https://user-images.githubusercontent.com/79617492/197730611-9d858475-4c60-4cb9-ba7c-906bfbae7ceb.png)
 
 ##### 图3-7 输入命令show databases
 
 i）输入命令use flowcore_influxdb_dev，切换进入配置文件中配置的flowcore_influxdb_dev数据库。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-8.png)
+![image](https://user-images.githubusercontent.com/79617492/197730636-d3057783-6e5d-475c-9fe0-b684fb0f9d96.png)
 
 ##### 图3-8 输入命令use flowcore_influxdb_dev
 
 j）输入命令show measurements，显示flowcore_influxdb_dev数据库中所有的表。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-9.png)
+![image](https://user-images.githubusercontent.com/79617492/197730665-7fc218ad-d678-4605-8fa4-f4e777c402e5.png)
 
 ##### 图3-9 输入命令show measurements
 
 其中的表字段注释：
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-10.png)
+![image](https://user-images.githubusercontent.com/79617492/197730689-5594f2f9-4289-4238-8e4d-9c0c747200fe.png)
 
 ##### 图3-10 其中的表字段
 
@@ -114,7 +114,7 @@ flowcore_server_request_ interfaceId _total ：单个接口的所有请求信息
 
 k）进入到全自动开发平台，双击打开对应接口，查看上方该接口的URL地址，将鼠标移动到地址的后面可以看到该接口的interfaceId。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/6.%20%E9%9B%86%E6%88%90%E7%9B%91%E6%8E%A7%E6%8E%A5%E5%8F%A3/3-11.png)
+![image](https://user-images.githubusercontent.com/79617492/197730720-ac4bfb2f-ccba-47f6-b79b-7682a749dacb.png)
 
 ##### 图3-11 查看接口的interfaceId
 
