--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/7. 接口设计文档/2. 查看接口设计文档历史版本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/7. 接口设计文档/2. 查看接口设计文档历史版本.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.13 接口管理
+
+#### 4.13.7 接口设计文档
+
+#### 4.13.7.2 查看接口设计文档历史版本
+
+本节主要介绍如何查看接口设计文档的历史版本。
+
+##### 说明：对接口设计文档进行提交版本操作后，您可以通过查看历史版本操作查看接口设计文档的所有历史版本以及版本详情。
+
+#### 4.13.7.2.1 操作步骤
+
+a）进入接口设计文档页面，单击“查看历史版本”选项，如图1-1所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/7.%20%E6%8E%A5%E5%8F%A3%E8%AE%BE%E8%AE%A1%E6%96%87%E6%A1%A3/2-1.png)
+
+##### 图2-1 接口设计文档页面
