--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/14. TCP_UDP模型管理/1. 新增TCP模型接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/14. TCP_UDP模型管理/1. 新增TCP模型接口.md
@@ -10,13 +10,13 @@
 
 a）进入TCP/UDP模型管理功能模块，选中需要操作的模块，单击加号 > 新增TCP/UDP模型，进入“新增TCP/UDP模型信息”的配置基本信息页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/197972524-d38c2e83-4d39-4f50-9c16-0d1e34bbc3dc.png)
 
 ##### 图1-1 单击新增TCP/UDP模型
 
 b）在“新增TCP/UDP模型信息”的配置基本信息页面，填写基本信息，选择TCP协议，单击下一步，进入“配置入口参数”页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197972545-f5ce5a95-b373-4583-b412-598c8a031648.png)
 
 ##### 图1-2 配置基本信息页面
 
@@ -24,24 +24,24 @@ b）在“新增TCP/UDP模型信息”的配置基本信息页面，填写基本
 
 c）在“配置入口参数”页面，单击新增入口参数自定义配置入参，单击提交，进入TCP的模型页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/197972567-8b869a48-aece-4ee9-b057-857ffa220c69.png)
 
 ##### 图1-3 “配置入口参数”页面
 
 d）在TCP的模型页面，单击进入模型编辑，进入“流程图编辑”页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/197972586-c01144c6-fb51-4334-ac3a-727ae63e682e.png)
 
 ##### 图1-4 单击进入模型编辑
 
 e）在“流程图编辑”页面，根据实际需求绘制流程图，绘制完成后单击保存并退出退出流程编辑页面。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/197972615-d0a4d0e7-f2c8-4539-be1a-cf14e78b0db4.png)
 
 ##### 图1-5 绘制流程图
 
 f）单击提交 > 发布模型 > 上线模型即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/197972643-1eef9209-db0c-4756-9d12-e6262e227734.png)
 
 ##### 图1-6 单击上线模型
