--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/14. TCP_UDP模型管理/2. 新增UDP模型接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/14. TCP_UDP模型管理/2. 新增UDP模型接口.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.14 TCP_UDP模型管理
+
+#### 4.14.2 新增UDP模型接口
+
+UDP（User Datagram Protocol，用户数据包协议）属于OSI参考模型中的传输层协议，是一种无连接的、提供面向事务的简单不可靠信息传送服务。与TCP不同，UDP无连接，在时间上不存在建立连接需要的延时，且UDP只会尽最大的努力交付，不保证可靠交付。
+
+本节将为您介绍如何在全自动开发平台新增UDP模型接口。
+
+#### 4.14.2.1 操作步骤
+
+a）进入TCP/UDP模型管理功能模块，选中需要操作的模块，单击加号 > 新增TCP/UDP模型，进入“新增TCP/UDP模型信息”的配置基本信息页面。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/2-1.png)
+
+##### 图2-1 单击新增TCP/UDP模型
