--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/14. TCP_UDP模型管理/2. 新增UDP模型接口.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/14. TCP_UDP模型管理/2. 新增UDP模型接口.md
@@ -15,3 +15,17 @@ a）进入TCP/UDP模型管理功能模块，选中需要操作的模块，单击
 ![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/2-1.png)
 
 ##### 图2-1 单击新增TCP/UDP模型
+
+b）在“新增TCP/UDP模型信息”的配置基本信息页面，填写正确的基本信息，选择“UDP协议”，单击下一步，进入“配置入口参数”页面。
+
+##### 注意：同租户下，所有的UDP模型接口的端口号不可重复，否则系统将提示端口已被其他服务占用，无法提交接口。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/2-2.png)
+
+##### 图2-2 填写基本信息
+
+c）在“配置入口参数”页面，单击新增入口参数自定义配置入参，单击提交，进入UDP的模型页面。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/14.%20TCP_UDP%E6%A8%A1%E5%9E%8B%E7%AE%A1%E7%90%86/2-3.png)
+
+##### 图2-3 单击新增入口参数自定义配置入参
