--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/1. 新增分布式中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/1. 新增分布式中间件资源实例.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.1 新增分布式中间件资源实例
+
+新增分布式中间件资源实例后，在SQL管理的SQL组中选择该资源，执行SQL语句便可以通过该资源配置连接到数据库进行操作。
+
+#### 4.15.1.1.1 前提条件
+
+项目中已添加分布式中间件加载项，具体操作可参见《SoFlu（后端）全自动开发平台教程第2.2.2节：如何加载资源部分》。
+
+#### 4.15.1.1.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“分布式中间件”后的 +按钮，选择“新增资源实例”。
+
+b）填写资源实例的名称和描述，选择系统默认的环境，填写对应的配置项信息，单击提交完成资源实例添加。
