--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/2. 新增嵌入式中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/2. 新增嵌入式中间件资源实例.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.2 新增嵌入式中间件资源实例
+
+嵌入式中间件，可以通过数据库驱动类型、ip地址、账号密码去连接到对应的数据库。
+
+新增嵌入式中间件资源后，在SQL管理的SQL组中选择该资源，执行SQL语句时便可以通过资源配置连接到数据库进行操作。
+
+#### 4.15.1.2.1 前提条件
+
+项目中已添加嵌入式中间件资源，具体操作可参见《SoFlu（后端）全自动开发平台教程第2.2.2节：如何加载资源部分》。
+
+#### 4.15.1.2.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“嵌入式中间件”后的 +按钮，选择“新增资源实例”。
