--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/2. 新增嵌入式中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/2. 新增嵌入式中间件资源实例.md
@@ -17,3 +17,26 @@
 #### 4.15.1.2.2 操作步骤
 
 a）进入资源实例功能模块界面，单击“嵌入式中间件”后的 +按钮，选择“新增资源实例”。
+
+b）填写资源实例的名称和描述，选择系统默认的环境，填写对应的配置项信息，单击提交完成资源实例添加。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/2-1.png)
+
+##### 图2-1 配置资源实例相关信息
+
+##### 注意：数据库密码既可以填写明文密码，也可以填写密文密码，密文密码需使用函数方法进行加解密操作后，再进行数据库的连接，如下图所示。
+
+```
+说明：
+
+b1）必填配置项：
+
+b1-1）驱动类：可以选择不同类型的数据库，默认支持MySQL数据库，若需要连接其他类型数据库，则需额外上传相应的驱动Jar包，并在对应的官方文档中查看驱动类名。
+
+b1-2）连接地址：JDBC连接地址，可在资源名称下方当前连接数据库中查看。
+
+b1-3）用户名：数据库账户名。
+
+b1-4）密码：数据库密码。
+
+b2）非必填配置项：
