--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/2. 新增嵌入式中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/2. 新增嵌入式中间件资源实例.md
@@ -40,3 +40,18 @@ b1-3）用户名：数据库账户名。
 b1-4）密码：数据库密码。
 
 b2）非必填配置项：
+
+b2-1）connectionErrorRetryAttempts：连接出错后再尝试连接次数，当breakAfterAcquireFailure配置项的值为true时生效。
+
+b2-2）timeBetweenConnectErrorMillis：连接出错后再次尝试连接的时间间隔，单位毫秒，当breakAfterAcquireFailure配置项的值为false时生效。
+
+b2-3）breakAfterAcquireFailure：用于控制连接出错后再次尝试连接的方式，值填写true或者false，默认值为true，若填写true，则表示连接出错后，选择连接次数方式再次尝试连接，即connectionErrorRetryAttempts配置项值生效，超过连接次数便停止再次尝试连接；若填写false，则选择按间隔时间方式再次尝试连接，即timeBetweenConnectErrorMillis配置项值生效，按间隔时间一直尝试连接。
+
+3、zkClient、zkUsername、zkPassword用于zkAdress账号信息的设置，当后台服务操作zkAddress相关内容时，若未获取到zkAddress的账号及密码信息，系统将会打印无权限操作的日志信息。需注意： 若需对zkAddress账号信息进行设置，则需要同时填写zkClient、zkUsername、zkPassword的值，其中zkClient的值固定为curator；若不用对zkAddress账号信息进行设置，则均无需填写。
+
+4、单击资源名称下方的点击数据库连接进入数据库连接管理页面，双击数据库连接信息，可以自动填充必填配置项数据。
+```
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/2-2.png)
+
+##### 图2-2 请选择函数
