--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/3. 新增SFTP存储资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/3. 新增SFTP存储资源实例.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.3 新增SFTP存储资源实例
+
+安全文件传输协议SFTP(SSH File Transfer Protocol)是文件传输协议(FTP)的安全版本，它提供了一个安全的连接来传输文件，SFTP服务器速度快、效率高，支持大文件传输，多个文件可以一次性从一个服务器传输到另一个服务器。
+
+本节为您介绍如何在平台新增SFTP存储资源实例，用于在接口中使用SFTP组件将文件以SFTP方式进行上传或下载。
+
+#### 4.15.1.3.1 前提条件
+
+项目中已加载SFTP存储资源。
