--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/4. 新增Minio存储资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/4. 新增Minio存储资源实例.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.4 新增Minio存储资源实例
+
+Minio是一种高性能对象存储，适用于存储海量视频、图片、文档等大容量非结构化的数据。
+
+本节为您介绍如何在平台新增Minio存储资源实例，用于在接口中使用Minio组件将文件以Minio方式进行上传或下载。
+
+#### 4.15.1.4.1 前提条件
+
+已加载Minio存储资源。
+
+#### 4.15.1.4.2 操作步骤
