--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/7. 新增Kafka消费者资源.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/7. 新增Kafka消费者资源.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.7 新增Kafka消费者资源
+
+系统提供该功能，您可以资源实例管理中新增Kafka消费者资源。
+
+#### 4.15.1.7.1 前提条件
+
+已加载Kafka消费者资源。
+
+#### 4.15.1.7.2 操作步骤
