--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/8. 新增Redis缓存资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/8. 新增Redis缓存资源实例.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.8 新增Redis缓存资源实例
+
+系统提供该功能，您可以资源实例管理中新增Redis缓存资源实例，一共有“集群模式”、“云托管模式”、“单节点模式”、“哨兵模式”和“主从模式”五种模式，根据需求自定义选择即可。
+
+#### 4.15.1.8.1 前提条件
+
+已加载Redis缓存资源。
+
+#### 4.15.1.8.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“Redis缓存”后的 +按钮，选择“新增资源实例”。
+
+b）填写资源实例基本信息，单击示例,进入资源实例示例页面。
