--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/8. 新增Redis缓存资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/8. 新增Redis缓存资源实例.md
@@ -17,3 +17,19 @@
 a）进入资源实例功能模块界面，单击“Redis缓存”后的 +按钮，选择“新增资源实例”。
 
 b）填写资源实例基本信息，单击示例,进入资源实例示例页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/8-1.png)
+
+##### 图8-1 填写资源实例基本信息
+
+c）在示例页面，选择对应模式示例，修改绿色字体参数，单击复制j即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/8-2.png)
+
+##### 图8-2 选择对应模式示例
+
+##### 说明：示例包含“集群模式”、“云托管模式”、“单节点模式”、“哨兵模式”和“主从模式”五种模式，根据需求选择对应的示例，修改绿色字体参数值，然后复制即可，不可修改json格式。
+
+d）关闭示例页面，在填写配置项信息方框中，粘贴刚才复制的json串，单击提交完成资源实例添加。
+
+![输入图片说明]
