--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/9. 新增HTTP通信资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/9. 新增HTTP通信资源实例.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.9 新增HTTP通信资源实例
+
+您可以资源实例管理中新增HTTP通信资源实例，用于管理HTTP请求的URL地址，搭配HTTP组件和FeignClient组件使用。
+
+#### 4.15.1.9.1 前提条件
+
+已加载HTTP资源。
+
+#### 4.15.1.9.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“HTTP通信”后的 +按钮，选择“新增资源实例”。
+
+b）在资源实例管理页面，填写资源实例的名称及描述信息，选择对应的环境，填写配置信息，单击提交即新增成功。
