--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/9. 新增HTTP通信资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/9. 新增HTTP通信资源实例.md
@@ -17,3 +17,19 @@
 a）进入资源实例功能模块界面，单击“HTTP通信”后的 +按钮，选择“新增资源实例”。
 
 b）在资源实例管理页面，填写资源实例的名称及描述信息，选择对应的环境，填写配置信息，单击提交即新增成功。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/9-1.png)
+
+##### 图9-1 配置资源实例相关信息
+
+```
+说明：
+
+b1）URL可以为空，不填写则为空的HTTP资源实例。
+
+b2）若是搭配HTTP组件使用的资源实例，URL格式为：协议://ip:port。
+
+b3）若是搭配FeignClient组件使用的资源实例，URL格式为：协议://项目路径。
+
+b4）其它配置根据实际需求填写即可。
+```
