--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/10. 新增MongoDB数据库资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/10. 新增MongoDB数据库资源实例.md
@@ -21,3 +21,15 @@ b）填写资源实例的名称和描述，单击示例。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/10-1.png)
 
 ##### 图9-1 配置资源实例相关信息
+
+C）根据示例类型，选择单个或多个地址配置格式，修改相应字段内容，单击复制。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/10-2.png)
+
+##### 图10-2 修改字段内容
+
+d）关闭示例页面，在默认环境输入框中粘贴上一步复制的信息，最后单击提交即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/10-3.png)
+
+##### 图10-3 粘贴上一步复制的信息
