--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/12. 新增Elasticsearch资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/12. 新增Elasticsearch资源实例.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.12 新增Elasticsearch资源实例
+
+系统提供该功能，您可以在资源实例管理中新增Elasticsearch资源实例。
+
+#### 4.15.1.12.1 前提条件
+
+项目中已加载Elasticsearch资源。
+
+#### 4.15.1.12.2 操作步骤
