--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/13. 新增数据库中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/13. 新增数据库中间件资源实例.md
@@ -17,3 +17,13 @@ b）填写资源实例的名称和描述，选择系统默认的环境，选择c
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/13-1.png)
 
 ##### 图13-1 配置资源实例相关信息
+
+```
+说明：
+
+b1）chechDal选择“分布式中间件”，用法和新增分布式资源实例一致，前半部分的字段为分布式资源实例的配置项，具体可参考《SoFlu（后端）全自动开发平台教程第4.15.1.1节：新增分布式资源实例》。
+
+b2）chechDal选择“嵌入式中间件”，用法和新增嵌入式资源实例一致，后半部分的字段为嵌入式资源实例的配置项，具体可参考《SoFlu（后端）全自动开发平台教程第4.15.1.2节：新增嵌入式资源实例》。
+
+b3）点击提交时，系统会根据chechDal选择的类型去校验对应的必填配置项是否填写正确，若填写有误，则会弹出相应提示。
+```
