--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/14. 新增路由中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/14. 新增路由中间件资源实例.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.14 新增路由中间件资源实例
+
+数据库中间件是分布式中间件和嵌入式中间件的结合体。用户可通过数据库中间件的checkDal配置来选择中间件类型，无须再单独添加分布式中间件或嵌入式中间件，以及配置对应的资源实例。
+
+#### 4.15.1.14.1 前提条件
+
+a）已存在分布式中间件或者嵌入式中间件或者数据库中间件的资源实例，三者中起码存在一种。
+
+b）项目中已加载路由中间件资源。
+
+#### 4.15.1.14.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“路由中间件”后的 +按钮，选择“新增资源实例”。
+
+b）填写资源实例的名称和描述，选择系统默认的环境，填写资源实例的配置项信息，单击提交完成资源实例添加。
