--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/14. 新增路由中间件资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/14. 新增路由中间件资源实例.md
@@ -19,3 +19,13 @@ b）项目中已加载路由中间件资源。
 a）进入资源实例功能模块界面，单击“路由中间件”后的 +按钮，选择“新增资源实例”。
 
 b）填写资源实例的名称和描述，选择系统默认的环境，填写资源实例的配置项信息，单击提交完成资源实例添加。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/14-1.png)
+
+##### 图14-1 配置资源实例相关信息
+
+##### 注意：routeValue的值为json格式，即{"自定义名称":"嵌入式资源实例或分布式资源实例资源名称"}，多个资源使用英文分号“;”隔开，如{"a":"blackliststi";"b":"分布式"}，a指向的是嵌入式的blackliststi资源实例，b指向的是分布式的分布式资源实例，如下图所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/14-2.png)
+
+##### 图14-2 多个资源示例
