--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/15. 新增Nacos资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/15. 新增Nacos资源实例.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.15 新增Nacos资源实例
+
+系统提供该功能，您可以资源实例管理中新增Nacos资源。
+
+#### 4.15.1.15.1 前提条件
+
+项目中已加载Nacos配置资源。
+
+#### 4.15.1.15.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“Nacos配置”后的 +按钮，选择“新增资源实例”。
+
+b）填写资源实例的名称和描述，选择系统默认的环境，填写Nacos服务地址，单击提交完成资源实例添加。
