--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/15. 新增Nacos资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/15. 新增Nacos资源实例.md
@@ -17,3 +17,19 @@
 a）进入资源实例功能模块界面，单击“Nacos配置”后的 +按钮，选择“新增资源实例”。
 
 b）填写资源实例的名称和描述，选择系统默认的环境，填写Nacos服务地址，单击提交完成资源实例添加。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/15-1.png)
+
+##### 图15-1 配置资源实例相关信息
+
+```
+说明：
+
+b1）host：Nacos注册中心服务的ip+端口。
+
+b2）isMock：Mock开关，该字段值只能为true和false，输入其他不生效。
+
+b3）mockReturnResult：Mock开关开启后返回的消息内容。
+
+b4）当调用FeignClient组件相关的接口时，若isMock为true，则FeignClient组件直接返回mockReturnResult的消息内容；若isMock为false，则FeignClient组件返回第三方接口的输出结果。
+```
