--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/16. 新增Etcd资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/1. 新增资源实例/16. 新增Etcd资源实例.md
@@ -1,1 +1,23 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.1 新增资源实例
+
+#### 4.15.1.16 新增Etcd资源实例
+
+系统提供该功能，您可以资源实例管理中新增etcd资源实例。
+
+#### 4.15.1.16.1 前提条件
+
+项目中已加载etcd资源。
+
+#### 4.15.1.16.2 操作步骤
+
+a）进入资源实例功能模块界面，单击“Etcd配置”后的 +按钮，选择“新增资源实例”。
+
+b）填写资源实例的名称和描述，选择系统默认的环境，填写etcd服务地址，单击提交完成资源实例添加。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/16-1.png)
+
+##### 图16-1 配置资源实例相关信息
