--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/2. 复制资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/2. 复制资源实例.md
@@ -1,1 +1,21 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.2 复制资源实例
+
+系统提供该功能，用户可以在同项目中复制资源实例，以减少频繁添加公共的资源实例。
+
+#### 4.15.2.1 前提条件
+
+a）您需要拥有“资源实例”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.15.2.2 操作步骤
+
+a）进入资源实例模块，选中需复制的资源实例，单击旁边的三个点符号，选择“复制资源实例”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/2.%20%E5%A4%8D%E5%88%B6%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+
+##### 图1-1 选择“复制资源实例”
