--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/2. 复制资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/2. 复制资源实例.md
@@ -16,18 +16,18 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入资源实例模块，选中需复制的资源实例，单击旁边的三个点符号，选择“复制资源实例”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/2.%20%E5%A4%8D%E5%88%B6%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/198537281-364ee942-951a-4a83-93d1-8e2c281d19b3.png)
 
 ##### 图1-1 选择“复制资源实例”
 
 b）单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/2.%20%E5%A4%8D%E5%88%B6%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/198537308-10a9781e-a7ba-4eb6-9294-eeb55fd0d8be.png)
 
 ##### 图1-2 单击确定
 
 c）修改资源实例名称，单击提交即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/2.%20%E5%A4%8D%E5%88%B6%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/198537326-63d71679-543b-4709-bcb1-25892b4eda18.png)
 
 ##### 图1-3 修改资源实例名称
