--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/3. 导入资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/3. 导入资源实例.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.15 资源实例
+
+#### 4.15.3 导入资源实例
+
+本节主要介绍如何导入资源实例。
+
+##### 说明：用户可以在不同项目之间导入导出资源实例，以减少频繁添加公共的资源实例。
+
+#### 4.15.3.1 操作步骤
+
+a）进入项目，选择资源实例功能模块，单击导入资源实例。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+
+##### 图1-1 单击导入资源实例
