--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/3. 导入资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/3. 导入资源实例.md
@@ -27,3 +27,13 @@ c）选择需要导入的环境，单击确定即可。
 ![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-3.png)
 
 ##### 图1-3 选择需要导入的环境
+
+```
+无法导入的注意事项：
+
+c1）您需要保证导入的资源实例JSON文件正确，若不正确则无法导入。
+
+c2）若导入资源实例对应的资源类型未加载，则无法导入，需要先加载对应的资源类型后再导入。
+
+c3）若导入的资源实例已存在，则无法导入，需选择覆盖原有的资源实例，导入后，原有的资源实例数据会被覆盖。
+```
