--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/3. 导入资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/3. 导入资源实例.md
@@ -12,19 +12,19 @@
 
 a）进入项目，选择资源实例功能模块，单击导入资源实例。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/198539333-eda00d91-c200-4f2f-a469-0bc065c8af72.png)
 
 ##### 图1-1 单击导入资源实例
 
 b）在导入资源实例页面，选择需导入的资源实例JSON文件，选择是否覆盖原有的资源实例，单击导入。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/198539364-dfb9aa63-12ac-4069-b609-09ab29008621.png)
 
 ##### 图1-2 导入资源实例
 
 c）选择需要导入的环境，单击确定即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/3.%20%E5%AF%BC%E5%85%A5%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/198539384-72536d41-171e-4c40-8ef0-0c7ff3a82ee9.png)
 
 ##### 图1-3 选择需要导入的环境
 
