--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/4. 导出资源实例.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/15. 资源实例/4. 导出资源实例.md
@@ -14,18 +14,18 @@
 
 a）单击资源实例模块，单击“导入资源实例”旁的三个点符号，选择“导出资源实例”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/4.%20%E5%AF%BC%E5%87%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/198546341-5e037140-00e1-4ee9-b903-50798f63b451.png)
 
 ##### 图1-1 选择“导出资源实例”
 
 b）输入导出资源实例文件的文件名（若未输入则自动生成），勾选需导出的资源实例，单击确定。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/4.%20%E5%AF%BC%E5%87%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/198546482-56accda1-af0d-4ebc-b311-bbdda9e61259.png)
 
 ##### 图1-2 勾选需导出的资源实例
 
 c）选择哪个环境下的配置导出，单击确定，导出成功。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/15.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/4.%20%E5%AF%BC%E5%87%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/198546510-6cbc2bf6-a39a-4cfb-90ea-9c5a34173488.png)
 
 ##### 图1-3 选择环境配置
