--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/1. 实体模型模块/3. 删除实体模型模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/1. 实体模型模块/3. 删除实体模型模块.md
@@ -1,1 +1,13 @@
-test
+### 4. 操作指南
+
+#### 4.16 实体模型
+
+#### 4.16.1 实体模型模块
+
+#### 4.16.1.3 删除实体模型模块
+
+本节主要介绍如何删除实体模型模块的具体操作方法。
+
+#### 4.16.1.3.1 操作步骤
+
+a）进入实体模型功能模块，选中需要操作的实体模型模块，单击“三个点按钮 > 删除实体模型模块”。
