--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/1. 实体模型模块/3. 删除实体模型模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/1. 实体模型模块/3. 删除实体模型模块.md
@@ -12,7 +12,7 @@
 
 a）进入实体模型功能模块，选中需要操作的实体模型模块，单击“三个点按钮 > 删除实体模型模块”。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B%E6%A8%A1%E5%9D%97/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/198549252-ca1690af-3240-443c-a974-4b56a2cbdc3e.png)
 
 ##### 图3-1 单击删除实体模型模块
 
