--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/1. 新增实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/1. 新增实体模型.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.16 实体模型
+
+#### 4.16.2 实体模型
+
+#### 4.16.2.1 新增实体模型
+
+实体模型用于对字段进行分类管理，提前定义好一组模型中的所有字段名称、字段类型、字段默认值，后续可以通过赋值组件为实体模型进行赋值。
+
+#### 4.16.2.1.1 操作步骤
+
+a）进入“实体模型”功能模块，选中已创建的实体模型模块，单击“+ > 新增实体模型”，进入新增实体模型页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/image.png)
+
+##### 图1-1 单击新增实体模型
