--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/1. 新增实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/1. 新增实体模型.md
@@ -12,13 +12,13 @@
 
 a）进入“实体模型”功能模块，选中已创建的实体模型模块，单击“+ > 新增实体模型”，进入新增实体模型页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/image.png)
+![image](https://user-images.githubusercontent.com/79617492/198981205-f06609b6-26d0-4c80-8155-493fbd9ba1d7.png)
 
 ##### 图1-1 单击新增实体模型
 
 b）在新增实体模型页面，输入正确的实体模型名称、描述，单击新增即可自定义实体模型的字段内容，填写完成后单击提交即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/198981229-aa5bd59a-ddc2-4317-a30c-bb6790b4bb6f.png)
 
 ##### 图1-2 配置实体模型相关信息
 
