--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/2. 修改实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/16. 实体模型/2. 实体模型/2. 修改实体模型.md
@@ -12,13 +12,13 @@
 
 a）进入实体模型功能模块，选中要修改的实体模型，单击三个点按钮 > 修改实体模型，打开“编辑实体模型”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/198981412-80600f98-cba2-46db-bfe8-4767786a8ca6.png)
 
 ##### 图2-1 单击修改实体模型
 
 b）在“编辑实体模型”页面，输入修改后的实体模型名称、描述以及字段信息，单击提交即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/16.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2.%20%E5%AE%9E%E4%BD%93%E6%A8%A1%E5%9E%8B/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/198981432-c4fb9d99-cab9-429f-bbbc-3547518d75a4.png)
 
 ##### 图2-2 输入修改后的实体模型信息
 
